--- a/filtredeBloom.tex
+++ b/filtredeBloom.tex
@@ -47,6 +47,7 @@
 		\label{filtredeBloom/exemple}
 	\end{table}
 	
+\newpage
 \begin{algorithme}
 	Test d'appartenance d'un élément dans le filtre
 \end{algorithme}
