--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 
 \chapter{Introduction}
-	{\Huge D}ans ce sujet, on abordera sur les recherches par mots clés. Une fois, on tape un mot ou une chaine de mots, l'application cherche dans la base de données pour trouver la liste des documents qui contient les descriptions correspondantes avec ces mots clés.
+	{\huge \itshape D}ans ce sujet, on abordera sur les recherches par mots clés. Une fois, on tape un mot ou une chaine de mots, l'application cherche dans la base de données pour trouver la liste des documents qui contient les descriptions correspondantes avec ces mots clés.
 	
 	Dans la base de données qui contient des grosses masses de donées, les index sont basés sur les descriptions des documents. Chaque mot est une clé, chaque clé contient une liste des documents ayant ce mot. Au contraire à la liste normale, le mot clé est le nom du document et il contient la liste des mots qui se trouvent dans la description de ce document. Par exemple, le mot {\em PSAR : le projet pour les étudiants du M1}, normalement, le mot clé est {\em PSAR}, donc il contient sa description {\em le projet pour les étudiants du M1}, mais dans cette liste, les mots clés sont {\em le, projet, pour, les, étudiants, du, M1} et chaque mot contient le mot {\em PSAR}. On s'appelle la {\em liste inversée}.
 	
