--- a/raport_main.tex
+++ b/raport_main.tex
@@ -11,6 +11,8 @@
 \usepackage{amsmath}
 \usepackage{bbm}
 \usepackage{graphicx}
+\usepackage{pst-all}
+\usepackage{xcolor}
 
 %\usepackage{nopageno}
 
