--- a/travail.tex
+++ b/travail.tex
@@ -37,8 +37,8 @@
 		\noindent\rule{\linewidth}{0.5pt}
 
 		\begin{tabbing}
-			$x \leftarrow$ FIRST($\sum desc$)\\
 			\textit{init($B^{512}$)}\\
+			$x \leftarrow$ FIRST($\sum desc$)\\
 			\textbf{while} \= $x \neq \emptyset$ \textbf{do}\\
 					\> $i \leftarrow$ SHA\_256(\textit{x})\\
 					\> $j \leftarrow i\ mod\ 512$\\
@@ -108,8 +108,8 @@
 		\begin{tabbing}
 			$i \leftarrow$ MAX\_LEVEL\\
 			$vector_i \leftarrow$ CREATE\_VECTOR($B^{512}$, \textit{i})\\
-			$x \leftarrow$ FIRST(\textit{VA\_file})\\
 			$tmp \leftarrow$ CREATE\_FILE(\textit{i})\\
+			$x \leftarrow$ FIRST(\textit{VA\_file})\\
 			
 			\textbf{while }\=$x \neq \emptyset $ \textbf{do}\\
 					\> \textbf{if }\=$vector_i \subseteq x$ {then}\\
@@ -147,7 +147,7 @@
 
 \chapter{Résultat obtenu}
 \section{Données}
-	{\huge \itshape N}ous avons testé sur 107 459 documents, cette application a généré 320 000 fichiers nécessaires. 107 459 documents sont sous forme un lien URL. Au début, ces lien sont stockés dans un fichier de test. Nous avons testé le programme sur le disque dur SATA II et un SSD. La création des fichiers nécessaires nous coûte plus de deux heures sur un disque dur traditionnel au lieu de 15 minuites sur un SSD. Du coup, nous avons choisi d'utiliser le SSD dans tous nos tests.
+	{\huge \itshape N}ous avons testé sur 107 459 documents, cette application a généré 320 000 fichiers nécessaires. 107 459 documents sont sous forme un lien URL. Au début, ces lien sont stockés dans un fichier de test. Nous avons testé le programme sur le disque dur SATA II et un SSD. La création des fichiers nécessaires nous coûte plus de deux heures sur un disque dur traditionnel au lieu de 15 minuites sur un SSD. Du coup, nous avons choisi d'utiliser le SSD dans tous nos tests. Avant de chaque test, les fichiers temporaires se sont vidés.
 	
 \newpage
 \section{Recherche aléatoire}
@@ -159,6 +159,12 @@
 	\begin{pspicture}(-3,-1)(110,110)
 		\psaxes[linewidth=1pt,linecolor=black,labels=none,ticks=none]{->}(0,0)(20.5,100)[$mot$,-90][$temps_{(s)}$,-180]
 		\psline[linewidth=1.5pt](1,89.9)(2,54.9)(3,51.5)(4,40.4)(5,16.4)(6,5.8)(7,2.1)(8,1.3)(9,0.3)(10,0.3)(11,0.3)(12,0.3)(13,0.3)(14,0.3)(15,0.3)(16,0.3)(17,0.3)(18,0.3)(19,0.3)(20,0.3)
+		\psline[linewidth=1pt,linecolor=black](1,1)(1,-1)\uput*[-90](1,0){1}
+		\psline[linewidth=1pt,linecolor=black](2,1)(2,-1)\uput*[-90](2,0){2}
+		\psline[linewidth=1pt,linecolor=black](8,1)(8,-1)\uput*[-90](8,0){8}
+		\psline[linewidth=1pt,linecolor=black](0.15,89.9)(-0.15,89.9)\uput*[-180](0,89.9){89.9}
+		\psline[linewidth=1pt,linecolor=black](0.15,54.9)(-0.15,54.9)\uput*[-180](0,54.9){54.9}
+		\psline[linewidth=1pt,linecolor=black](0.15,1.3)(-0.15,1.3)\uput*[-180](0,1.3){1.3}
 	\end{pspicture}
 	\caption{Recherche aléatoire}
 	\label{recherche/aleatoire}	
@@ -171,19 +177,35 @@
 	Dans le premier test, nous choissons l'ensemble des mots clés qui appartiennent à plusieurs descriptions, ces mots clés sont appelés "populaire". Le deuxième test, nous prennons que les mots clés spécifiques qui sont caractéristiques pour chaque document dans la description d'un document quelconque. La description d'un document dans ces deux tests reste identique, ce qui change est les mots clés utilisés. Nous commençons par 1 mot et chaque fois nous relançons la requête, nous augmentons le nombre de mots clés. Dans le premier test, le nombre de mots clés augmenté ne signifie que le temps va être réduit.Dans le graphe, nous montrons que si on ajoute un mot "très populaire", ce mot nous coûte plus de temps. Dans le deuxième test, si on ajoute un mot "populaire", ce mot casse l'advantage de la recherche sélective. Donc, pour mieux rechercher un document, il faut que nous cherchions plusieurs mots clés qui caractérisent le document. Dans la figure \ref{recherche/selective}, nous testons sur les requête d'un à sept mots clés. 
 	
 	\begin{figure}[!htbp]
-	\psset{linecolor=blue}
-	\psset{xunit=1cm, yunit=0.1cm}
-	\begin{pspicture}(-3,-1)(110,110)
-		\psaxes[linewidth=1pt,linecolor=black,labels=none,ticks=none]{->}(0,0)(8,100)[$mot$,-90][$temps_{(s)}$,-180]
-		\psline[linecolor=red,linewidth=1.5pt](1,84.2)(2,89.1)(3,42.7)(4,64.4)(5,55.7)(6,62.2)(7,71.3)
-		\psline[linecolor=blue,linewidth=1.5pt](1,84.2)(2,40.1)(3,37.4)(4,20.4)(5,17.7)(6,16.8)(7,0.8)
-		\psline[linecolor=red,linewidth=1.5pt](3,100)(4,100) \uput*[0](4.3,100){\small{recherche avec les mots clés populaires}}
-		\psline[linecolor=blue,linewidth=1.5pt](3,96)(4,96) \uput*[0](4.3,96){\small{recherche avec les mots clés caractéristiques}}
-		%\uput*[45](9,0.3){(9,0.3)}
-	\end{pspicture}
-	\caption{Recherche sélective}
-	\label{recherche/selective}	
-\end{figure}	
+		\psset{linecolor=blue}
+		\psset{xunit=1cm, yunit=0.1cm}
+		\begin{pspicture}(-3,-1)(110,110)
+			\psaxes[linewidth=1pt,linecolor=black,labels=none,ticks=none]{->}(0,0)(8,100)[$mot$,-90][$temps_{(s)}$,-180]
+			\psline[linecolor=red,linewidth=1.5pt](1,84.2)(2,89.1)(3,42.7)(4,64.4)(5,55.7)(6,62.2)(7,71.3)
+			\psline[linecolor=blue,linewidth=1.5pt](1,84.2)(2,40.1)(3,37.4)(4,20.4)(5,17.7)(6,16.8)(7,0.8)
+			\psline[linecolor=red,linewidth=1.5pt](3,100)(4,100) \uput*[0](4.3,100){\small{recherche avec les mots clés populaires}}
+			\psline[linecolor=blue,linewidth=1.5pt](3,96)(4,96) \uput*[0](4.3,96){\small{recherche avec les mots clés caractéristiques}}
+			\psline[linewidth=1pt,linecolor=black](1,1)(1,-1)\uput*[-90](1,0){1}
+			\psline[linewidth=1pt,linecolor=black](0.08,84.2)(-0.08,84.2)\uput*[-180](0,84.2){\small{84.2}}
+			\psline[linewidth=1pt,linecolor=black](2,1)(2,-1)\uput*[-90](2,0){2}
+			\psline[linewidth=1pt,linecolor=black](0.08,89.1)(-0.08,89.1)\uput*[-180](0,89.1){\small{89.1}}
+			\psline[linewidth=1pt,linecolor=black](0.08,40.1)(-0.08,40.1)\uput*{27pt}[-180](0,40.1){\small{40.1}}
+			\psline[linewidth=1pt,linecolor=black](3,1)(3,-1)\uput*[-90](3,0){3}
+			\psline[linewidth=1pt,linecolor=black](0.08,42.7)(-0.08,42.7)\uput*[-180](0,42.7){\small{42.7}}
+			\psline[linewidth=1pt,linecolor=black](0.08,37.4)(-0.08,37.4)\uput*[-180](0,37.4){\small{37.4}}
+			\psline[linewidth=1pt,linecolor=black](4,1)(4,-1)\uput*[-90](4,0){4}
+			\psline[linewidth=1pt,linecolor=black](0.08,64.4)(-0.08,64.4)\uput*[-180](0,64.4){\small{64.4}}
+			\psline[linewidth=1pt,linecolor=black](0.08,20.4)(-0.08,20.4)\uput*[-180](0,20.4){\small{20.4}}
+			\psline[linewidth=1pt,linecolor=black](7,1)(7,-1)\uput*[-90](7,0){7}
+			\psline[linewidth=1pt,linecolor=black](0.08,71.3)(-0.08,71.3)\uput*[-180](0,71.3){\small{71.3}}
+			\psline[linewidth=1pt,linecolor=black](0.08,0.8)(-0.08,0.8)\uput*[-180](0,0.8){\small{0.8}}
+		\end{pspicture}
+		\caption{Recherche sélective}
+		\label{recherche/selective}	
+	\end{figure}
+
+\chapter{Conclusion}
+	{\huge \itshape A}près ce projet, notre technique de recherche a besoin d'améliorer, le temps de réponse est très important. Car a création d'un vecteur est une sorte de vecteur approximatif, mais ce vecteur ne caractérise pas forcément les caractéristiques du filtre donné. En plus, notre programme est écrit en C, donc la mémoire louée pour chaque programme est limité, nous ne pouvons stocker toutes les données intermédiaire dans la mémoire. Du coup, nous travaillons sur le disque dont le temps d'accès de disque nous coûte cher. Chaque fois nous obtenons un résultat intermédiaire, nous devons écrire sur le disque sous forme d'un fichier.
 
 
 
